--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc",
-    "postinstall": "npm run build"
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@remix-run/node": "^2.12.0",
