--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: inquestofknowledge-website
     env: node
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: rm -rf node_modules package-lock.json && npm install --no-optional --force && npm run build
     startCommand: npm start
     healthCheckPath: /
     envVars:
